--- a/app/login/templates/login.html
+++ b/app/login/templates/login.html
@@ -16,12 +16,12 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>Login Basic - Pages | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>
+    <title>Santa María | Login</title>
 
     <meta name="description" content="" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="{% static '' %}login/img/favicon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="{% static '' %}login/img/favicon/minilogo.png" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -37,25 +37,16 @@
     <!-- Core CSS -->
     <link rel="stylesheet" href="{% static '' %}login/vendor/css/core.css" class="template-customizer-core-css" />
     <link rel="stylesheet" href="{% static '' %}login/vendor/css/theme-default.css" class="template-customizer-theme-css" />
-    <link rel="stylesheet" href="{% static '' %}login/css/demo.css" />
-
-    <!-- Vendors CSS -->
-    <link rel="stylesheet" href="{% static '' %}login/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
 
     <!-- Page CSS -->
     <!-- Page -->
     <link rel="stylesheet" href="{% static '' %}login/vendor/css/pages/page-auth.css" />
     <!-- Helpers -->
     <script src="{% static '' %}login/vendor/js/helpers.js"></script>
-
-    <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
-    <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="{% static '' %}login/js/config.js"></script>
   </head>
 
   <body>
     <!-- Content -->
-
     <div class="container-xxl">
       <div class="authentication-wrapper authentication-basic container-p-y">
         <div class="authentication-inner">
@@ -64,15 +55,8 @@
             <div class="card-body">
               <!-- Logo -->
               <div class="app-brand justify-content-center">
-                <a href="{% url 'index' %}" class="app-brand-link gap-2">
+                <a href="{% url 'index' %}"><img src="{% static '' %}img/logo_sm.png" alt=""></a>
                   <span class="app-brand-logo demo">
-                    <svg
-                      width="25"
-                      viewBox="0 0 25 42"
-                      version="1.1"
-                      xmlns="http://www.w3.org/2000/svg"
-                      xmlns:xlink="http://www.w3.org/1999/xlink"
-                    >
                       <defs>
                         <path
                           d="M13.7918663,0.358365126 L3.39788168,7.44174259 C0.566865006,9.69408886 -0.379795268,12.4788597 0.557900856,15.7960551 C0.68998853,16.2305145 1.09562888,17.7872135 3.12357076,19.2293357 C3.8146334,19.7207684 5.32369333,20.3834223 7.65075054,21.2172976 L7.59773219,21.2525164 L2.63468769,24.5493413 C0.445452254,26.3002124 0.0884951797,28.5083815 1.56381646,31.1738486 C2.83770406,32.8170431 5.20850219,33.2640127 7.09180128,32.5391577 C8.347334,32.0559211 11.4559176,30.0011079 16.4175519,26.3747182 C18.0338572,24.4997857 18.6973423,22.4544883 18.4080071,20.2388261 C17.963753,17.5346866 16.1776345,15.5799961 13.0496516,14.3747546 L10.9194936,13.4715819 L18.6192054,7.984237 L13.7918663,0.358365126 Z"
@@ -120,46 +104,45 @@
                       </g>
                     </svg>
                   </span>
-                  <span class="app-brand-text demo text-body fw-bolder">Sneat</span>
                 </a>
               </div>
               <!-- /Logo -->
-              <h4 class="mb-2">Welcome to Sneat! 👋</h4>
-              <p class="mb-4">Please sign-in to your account and start the adventure</p>
+              <h4 class="mb-2">Bienvenido a Santa María! 👋</h4>
+              <p class="mb-4">Por favor, inicia sesión con tu cuenta y comienza la aventura</p>
 
               <form id="formAuthentication" class="mb-3" action="" method="POST">
                 {% csrf_token %}
                 <div class="mb-3">
-                  <label class="form-label">Email or Username</label>
-                   {{ form.username|add_class:'form-control'|attr:'autocomplete:off'|attr:'placeholder:Nombre de usuario' }}
+                  <label class="form-label">Nombre de usuario</label>
+                   {{ form.username|add_class:'form-control'|attr:'autocomplete:off'|attr:'placeholder:Introduce tu nombre de usuario' }}
                 </div>
                 <div class="mb-3 form-password-toggle">
                   <div class="d-flex justify-content-between">
                     <label class="form-label">Contraseña</label>
                     <a href="auth-forgot-password-basic.html">
-                      <small>Forgot Password?</small>
+                      <small>Olvidaste tu contraseña?</small>
                     </a>
                   </div>
                   <div class="input-group input-group-merge">
-                    {{ form.password|add_class:'form-control'|attr:'id:password'|attr:'autocomplete:off'|attr:'placeholder:Contraseña' }}
+                    {{ form.password|add_class:'form-control'|attr:'id:password'|attr:'autocomplete:off'|attr:'placeholder:Introduce tu contraseña' }}
                     <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
                   </div>
                 </div>
                 <div class="mb-3">
                   <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="remember-me" />
-                    <label class="form-check-label" for="remember-me"> Remember Me </label>
+                    <label class="form-check-label" for="remember-me"> Recuérdame </label>
                   </div>
                 </div>
                 <div class="mb-3">
-                  <button class="btn btn-primary d-grid w-100" type="submit">Sign in</button>
+                  <button class="btn btn-primary d-grid w-100" type="submit">Iniciar sesión</button>
                 </div>
               </form>
 
               <p class="text-center">
-                <span>New on our platform?</span>
+                <span>Nuevo en nuestra plataforma?</span>
                 <a href="auth-register-basic.html">
-                  <span>Create an account</span>
+                  <span>Créate una cuenta</span>
                 </a>
               </p>
             </div>
@@ -169,35 +152,8 @@
       </div>
     </div>
 
-    <!-- / Content -->
-
-    <div class="buy-now">
-      <a
-        href="https://themeselection.com/products/sneat-bootstrap-html-admin-template/"
-        target="_blank"
-        class="btn btn-danger btn-buy-now"
-        >Upgrade to Pro</a
-      >
-    </div>
-
-    <!-- Core JS -->
-    <!-- build:js assets/vendor/js/core.js -->
-    <script src="{% static '' %}login/vendor/libs/jquery/jquery.js"></script>
-    <script src="{% static '' %}login/vendor/libs/popper/popper.js"></script>
-    <script src="{% static '' %}login/vendor/js/bootstrap.js"></script>
-    <script src="{% static '' %}login/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-
-    <script src="{% static '' %}login/vendor/js/menu.js"></script>
-    <!-- endbuild -->
-
-    <!-- Vendors JS -->
-
     <!-- Main JS -->
     <script src="{% static '' %}login/js/main.js"></script>
 
-    <!-- Page JS -->
-
-    <!-- Place this tag in your head or just before your close body tag. -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
